p2/confs/ubuntu.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu
spec:
  containers:
  - name: ubuntu
    image: ubuntu:latest
    command:
      - "bash"
      - "-c"
      - |
        apt-get update && \
        apt-get install -y iputils-ping curl && \
        sleep infinity
