p2/confs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /app-one
        pathType: Prefix
        backend:
          service:
            name: app-one
            port:
              number: 8080
      - path: /app-two
        pathType: Prefix
        backend:
          service:
            name: app-two
            port:
              number: 8080
      - path: /app-three
        pathType: Prefix
        backend:
          service:
            name: app-three
            port:
              number: 8080
